# lyrical-lattice

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: commit.md  lint.md  plan.md  pr.md  serve.md  simplify.md  test.md  verify.md
.claude/hooks/: agent-stop-verify.sh  post-tool-use-format.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20251216_0001_initial_schema.py
data/lexicons/: entendre_lexicon.json  onomatopoeia.json
docs/: PRD.md
frontend/: app.js  index.html  style.css
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
scripts/: build_corpus.py  build_index.py  seed_phonemes.py  train_embedder.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py
src/api/models/: __init__.py  requests.py  responses.py
src/api/routers/: __init__.py  audio.py  health.py  oronyms.py  (+3 more)
src/core/: __init__.py  config.py
src/detection/: __init__.py  models.py  music_detectors.py  phonetic_detectors.py  semantic_detectors.py  unified_detector.py
src/models/: __init__.py  base.py  frequency.py  phoneme.py  word.py
src/services/: __init__.py  cache_service.py  db_service.py  file_service.py
src/utils/: __init__.py  logger.py  metrics.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_oronyms.py  test_api_phonemize.py  test_api_rhymes.py
tests/unit/: test_ipa_utils.py  test_search.py  test_syllabifier.py  test_validators.py
(+10 files in other folders)
